<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="addTaskToolbarTitle"
            type="String" />

        <variable
            name="taskDate"
            type="String" />

        <variable
            name="taskTime"
            type="String" />

        <variable
            name="addTaskFragment"
            type="com.example.todolistapp.ui.fragment.AddTaskFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.fragment.AddTaskFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarAddTask"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/vc_arrow_left"
            app:navigationOnClickListener="@{() -> addTaskFragment.onBackPressed()}"
            app:title="@{addTaskToolbarTitle}"
            app:titleTextAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:titleTextColor="@color/black" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/title_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/linearLayoutTitle"
            app:layout_constraintTop_toBottomOf="@+id/toolbarAddTask" />

        <LinearLayout
            android:id="@+id/linearLayoutTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_edit_text"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle">

            <ImageView
                android:id="@+id/ivTaskTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/vc_text_title"
                app:tint="@color/bg_button" />

            <EditText
                android:id="@+id/editTextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="Type here"
                android:inputType="text"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/date_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/linearLayoutDate"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutTitle" />

        <LinearLayout
            android:id="@+id/linearLayoutDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_edit_text"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDate">

            <ImageView
                android:id="@+id/ivTaskDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/vc_date_range"
                app:tint="@color/bg_button" />

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:hint="03/11/2023"
                android:onClick="@{() -> addTaskFragment.selectDate()}"
                android:text="@{taskDate}"
                tools:ignore="HardcodedText,TextFields" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/time_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/linearLayoutTime"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutDate" />

        <LinearLayout
            android:id="@+id/linearLayoutTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_edit_text"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTime">

            <ImageView
                android:id="@+id/ivTaskTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/vc_time_range"
                app:tint="@color/bg_button" />

            <EditText
                android:id="@+id/editTextTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:hint="15:30"
                android:onClick="@{() -> addTaskFragment.selectTime()}"
                android:text="@{taskTime}"
                tools:ignore="HardcodedText" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonAddTask"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/bg_button"
            android:onClick="@{() -> addTaskFragment.createTask(editTextTitle.getText().toString(), editTextDate.getText().toString(), editTextTime.getText().toString())}"
            android:padding="10dp"
            android:text="@string/add_task_button"
            android:textSize="@dimen/add_task_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutTime" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>